# leab

./: .gitignore  .travis.yml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy-docs.yml  python-tests.yml  release.yml
_static/: logo.py
data/: evan_miller_chi2_default_4.csv  evan_miller_ttest_default_1.csv  evan_miller_ttest_default_2.csv
docs/: Makefile  conf.py  index.md  index.rst
docs/_static/: logo.py
docs/content/: api.rst  install.rst  user-guide.rst
docs/notebooks/: average_comparaison.ipynb  mean_comparaison.ipynb  sample_size.ipynb  success_comparaison.ipynb
docs/reference/: leAverage.md  leSample.md  leSuccess.md
leab/: __init__.py
leab/after/: __init__.py  leAverage.py  leMean.py  leSuccess.py
leab/before/: __init__.py  leReport.py  leSample.py
leab/before/templates/: leTemplate.html
leab/leDataset/: __init__.py  sample_le_average.py  sample_le_mean.py  sample_le_success.py
leab/leDataset/data/: data_chi2.csv  evan_miller_chi2_default_1.csv  evan_miller_chi2_default_2.csv  evan_miller_chi2_default_3.csv  evan_miller_chi2_default_5.csv
notebooks/: average_comparaison.ipynb  success_comparaison.ipynb
reference/: leAverage.html  leSample.html  leSuccess.html
search/: search_index.json
tests/: test_leAverage.py  test_leSample.py  test_leSuccess.py
